[package]
name = "hitsound-copier"
version = "0.0.5"
description = "A osu! mapping toolbox made in TS with tauri"
authors = ["maotovisk"]
license = ""
repository = ""
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "app-all", "path-all", "fs-all", "dialog-all", "window-close", "window-unminimize", "window-show", "window-unmaximize", "window-minimize", "window-hide", "window-maximize", "window-start-dragging", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
